# themis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamlfmt  CLAUDE.md  GLOSSARY.md  LICENSE  README.md  buf.yaml  conftest.py  pyproject.toml
.claude/: settings.json
.claude/rules/: claude-api.md  nextjs.md  pulumi.md  python.md
.github/: CODEOWNERS
.github/doc-garden/: instructions.md  pr-body.md
.github/review/: context-budget.md  general.md  leak-screen.md  security.md
.github/screen/: patterns.yaml
.github/workflows/: deploy.yml  internal-doc-garden.yml  internal-mirror.yml  internal-review.yml  internal-screen-regex.yml  lint.yml  preview.yml  schema-compat.yml  schema-freshness.yml  tests.yml  web.yml
agents/: sandbox-probe.agent.yaml  selfhosted.environment.yaml
apps/web/: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  buf.gen.yaml  bunfig.toml  default.conf.template  index.html  next.config.ts  package.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  workbench.tsx
apps/web/src/components/: analysis-browser.tsx  app-bar.tsx  eyebrow.tsx  identifier-tag.tsx  logo.tsx  section-heading.tsx
apps/web/src/lib/: api.ts  format.ts  queries.ts
apps/web/src/server/: authorized-backend.test.ts  authorized-backend.ts  context.ts  errors.ts  identity.ts  ports.ts  tool-label.ts
apps/web/src/types/: next-image.d.ts
buf/validate/: validate_pb2.py
docs/: PRODUCT.md  repo-structure.md
docs/adr/: 0002-manifest-renderings-and-reference-model.md  0003-serialization-posture.md  0004-json-canonical-interchange.md
docs/design/: agent-runtime.md  deployment.md  frontend-framework.md  litcache-manifest.md  literature-evidence-layer.md  managed-agents.md  migrations.md  pr-screenshots.md  proto.md  security.md  services.md  spike-infrastructure.md  typespec.md  workspace-model.md
docs/plans/: doc-garden.md  literature-cache.md  managed-agents-wiring.md  migrate-runner.md  postern-sandbox-swap.md  screen-and-mirror-workflow.md  self-hosted-sandbox.md
docs/runbooks/: claude-api-wif.md  doc-garden-app-setup.md  fresh-environment.md  iap-access.md  mirror-app-setup.md  self-hosted-sandbox.md
docs/style/: design-docs.md  general.md  python.md
infra/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py
infra/bootstrap/: bootstrap.sh
infra/themis_infra/: __init__.py  auth.py  backend.py  baseline.py  deploy_iam.py  hello.py  ingest.py  internal_lb.py  sandbox.py  secrets.py  services_network.py  sql.py  storage.py  store.py  web.py
schema/: bunfig.toml  package-lock.json  package.json  tsconfig.json  tspconfig.yaml
schema/auth/: main.tsp
schema/hello/: main.tsp
schema/litcache/: main.tsp  manifest.tsp  source.tsp
schema/proto/themis/rpc/: auth.proto  hello.proto  store.proto
schema/store/: main.tsp
schema/tests/: conftest.py  test_baseline.py  test_buf_compat.py  test_chuckd_compat.py  test_committed_schemas.py  test_compat.py  test_generated_pydantic.py  test_generated_stubs.py  test_generated_zod.py
schema/tests/compat/contract-deleted/: expected.txt
schema/tests/fixtures/demo/: common.tsp  (+2 more)
schema/tests/jsonschema/: demo.schema.json  features.schema.json
schema/tests/proto/: features.proto  features_pb2.py  features_pb2.pyi
schema/tests/pydantic/: demo.py  features.py
schema/tests/zod/: demo.ts  features.ts
tests/: test_storage.py
tests/fixtures/litcache/: README.md
tests/litcache/: conftest.py  test_access.py  test_convert.py  test_crossref.py  test_crosswalk.py  test_efetch.py  test_identity.py  test_litcache_validation.py  test_litfetch_smoke.py  test_oa.py  test_openalex.py  test_pdf.py  test_pubmed_proto_smoke.py  test_rebuild.py  test_resolve.py  test_writer.py
tests/tools/: test_check_links.py
tests/tools/schema/: test_normalize.py  test_zod_canonicalize.py  test_zod_reorder.py
tests/tools/screen/: test_regex_screen.py
themis/: storage.py
themis/agent/: Dockerfile  prompt.md  services.py  worker.py
themis/agent/tests/: test_worker.py
themis/clients/: id_token.py
themis/clients/auth/: __init__.py  derive.py  session.py
themis/clients/work_queue/: client.py
themis/common/: __init__.py  constants.py  sql.py  storage.py
themis/common/tests/: test_sql.py  test_storage.py
themis/document_linter/: __main__.py  linter.py
themis/document_linter/tests/: test_linter.py
themis/litcache/: __init__.py  access.py  convert.py  crossref.py  crosswalk.py  efetch.py  identity.py  oa.py  openalex.py  pdf.py  rebuild.py  resolve.py  writer.py
themis/litcache/models/: litcache_pb2.py  litcache_pb2.pyi
themis/migrate/: __init__.py  __main__.py  cloudsql.py  config.py  migrate.py
themis/migrate/migrations/: 0001_session_context.sql  0002_grants.sql  0003_litcache_crosswalk.sql  0004_analyses.sql  0005_project_members.sql  0006_projects.sql  0007_litcache_crosswalk_grant.sql
themis/migrate/tests/: test_cloudsql.py  test_config.py  test_migrate.py  test_migrations.py
themis/rpc/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  hello_pb2.py  hello_pb2.pyi  hello_pb2_grpc.py  store_pb2.py  store_pb2.pyi  store_pb2_grpc.py
themis/services/auth/: Dockerfile  __main__.py  backend.py  cloudsql.py  servicer.py
themis/services/dispatcher/: Dockerfile  __main__.py  dispatch.py  handler.py  job_runner.py  webhook.py
themis/services/hello/: Dockerfile  __main__.py  servicer.py
themis/services/proxy/: Dockerfile  __main__.py  allowlist.py  anthropic_proxy.py  grpc_forward.py  store_client.py  stream_tap.py  sync.py  tls.py  workspace.py
themis/services/sandbox_worker/: Dockerfile  __init__.py  __main__.py  hatch.py  store_client.py  sync.py  tool.py  worker.py
themis/services/store/: Dockerfile  __main__.py  gcs.py  servicer.py  storage.py
themis/testing/: __init__.py  in_process_grpc.py
themis/workbench/models/: workbench_pb2.py  workbench_pb2.pyi
tools/: check_links.py
tools/schema/: baseline.py  buf_compat.py  chuckd_compat.py  compat.py  normalize.py  regen.py  zod_canonicalize.py  zod_reorder.py
tools/screen/: regex_screen.py
(+104 files in other folders)
