# Not (yet) an installable package: no [build-system] / [tool.hatch.*]
# sections. The [project] table is here only to give dependency groups
# (PEP 735) somewhere to live. Add a build backend when application
# code lands and we want a real distribution.

[project]
name = "themis"
version = "0.0.0"
requires-python = ">=3.13"

# Supply-chain age gate: never resolve a release younger than 7 days. Declared
# in-repo (not only in global uv config) so CI and contributors inherit the same
# resolution — a global-only gate makes the lock unreproducible: uv detects
# "removal of global exclude newer" off-machine and `--locked` fails. Relative,
# not a fixed date: the intent is an ongoing "nothing younger than 7 days", not
# a frozen cutoff. Consequence (per repo policy): a local re-lock rolls back any
# committed version younger than the window; it self-heals as the version ages
# past 7 days and Dependabot re-bumps it.
[tool.uv]
exclude-newer = "7 days"

[dependency-groups]
screen = ["pyyaml"]
# Schema codegen: datamodel-code-generator turns the normalized JSON Schema into
# Pydantic v2 models (tools/schema/regen.py). A CLI, never imported.
codegen = ["datamodel-code-generator"]
# check-jsonschema: the metaschema validator the schema tests shell out to
# (schema/tests). Invoked as a CLI, never imported, so no type stubs. pydantic:
# import-check the generated models in schema/tests (the codegen group provides
# the generator; the runtime import needs pydantic itself).
test = ["pytest", "pyyaml", "check-jsonschema", "pydantic"]
# Pulumi program deps (infra/). Also the venv Pulumi runs the program in
# (infra/Pulumi.yaml -> virtualenv ../.venv): `uv sync --group infra`.
infra = ["pulumi", "pulumi-gcp"]
# pre-commit: the lint CI job runs `pre-commit run --all-files`, so the hook
# config is the single source of truth for static checks — CI can't drift from
# what runs locally. pydantic: pyright (now a hook) type-checks schema/tests (the
# generated models and their tests) which import pydantic; absent it, pyright
# can't resolve pydantic.* and fails on symbols the env (which has pydantic)
# resolves fine.
lint = ["pre-commit", "ruff", "pyright", "pytest", "pyyaml", "types-PyYAML", "pydantic", { include-group = "infra" }]

[tool.pytest.ini_options]
# schema/tests holds the TypeSpec tool's tests + .tsp fixtures, co-located with
# the schema/ Node project so the emitter's node_modules resolution works.
testpaths = ["tests", "schema/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py313"

# Generated Pydantic models (tools/schema/regen.py): committed, never hand-edited,
# so linting them is noise (e.g. the datamodel-codegen header trips ERA001) and a
# reformat would fight the freshness gate. Real-domain model dirs join this list
# when they land (Stage 1+). The pre-commit ruff hooks pass --force-exclude, so
# this holds even when pre-commit hands ruff explicit paths.
extend-exclude = ["schema/tests/pydantic"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "W",
    "ANN", "ARG", "BLE", "COM", "DTZ", "ERA", "EXE", "ICN", "ISC",
    "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "T10", "TID", "UP", "YTT",
]

fixable = ["ALL"]

ignore = [
    "COM812",  # Trailing comma prohibited
    # D1xx — docstring *presence*. We enforce docstring format (D2/D3/D4)
    # if a docstring exists, but don't require one on every public symbol.
    # The general-review prompt nudges authors toward docstrings on
    # public APIs as a soft policy.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "Q000",    # Single quotes found but double quotes preferred
    "Q003",    # Change outer quotes (conflicts with single-quote formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]
"schema/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["themis_infra"]

# Complexity thresholds: roughly double the ruff defaults so the checks
# fire on genuinely sprawling code but not on everyday parsers and
# dispatcher functions.
[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 10
max-statements = 80
max-locals = 25

[tool.pyright]
pythonVersion = "3.13"
include = ["tools", "tests", "schema/tests", "infra"]
extraPaths = ["infra"]
typeCheckingMode = "standard"
