# Not (yet) an installable package: no [build-system] / [tool.hatch.*]
# sections. The [project] table is here only to give dependency groups
# (PEP 735) somewhere to live. Add a build backend when application
# code lands and we want a real distribution.

[project]
name = "themis"
version = "0.0.0"
requires-python = ">=3.13"

# Supply-chain age gate: never resolve a release younger than 7 days. Declared
# in-repo (not only in global uv config) so CI and contributors inherit the same
# resolution — a global-only gate makes the lock unreproducible: uv detects
# "removal of global exclude newer" off-machine and `--locked` fails. Relative,
# not a fixed date: the intent is an ongoing "nothing younger than 7 days", not
# a frozen cutoff. Consequence (per repo policy): a local re-lock rolls back any
# committed version younger than the window; it self-heals as the version ages
# past 7 days and Dependabot re-bumps it.
[tool.uv]
exclude-newer = "7 days"
# litfetch, litdown, and pubmed-proto are CPG-owned and first-party: we cut the
# releases, so the supply-chain window the global gate guards against (a compromised
# third-party upload) doesn't apply. `0 days` (relative, prior-to-now) exempts them
# so a just-cut release is resolvable. Removing the age cushion is paired with an
# exact pin on each (dependency-groups below): with no cushion, the pin is what
# stops a re-lock from silently adopting a new — possibly account-compromised —
# release; a bump is then an explicit, reviewed pyproject edit. Keep this list and
# those pins in lock-step: anything exempted here must be exact-pinned.
exclude-newer-package = { litfetch = "0 days", litdown = "0 days", pubmed-proto = "0 days" }

[dependency-groups]
screen = ["pyyaml"]
# litcache runtime (litcache/), one clause per dep: google-cloud-storage — GCS
# Storage backend; psycopg[binary] — Cloud SQL crosswalk mint; docling-core —
# non-OA Docling-json→markdown; pypdfium2 — pdf char-addressability probe;
# litfetch — OA fetch + raw licence; litdown — JATS/Elsevier XML→markdown from
# bytes (the OA branch calls it directly on the fetched bytes, added in 0.4);
# pubmed_proto — bibliographic metadata.json. The three are exact-pinned because
# they're age-gate-exempt ([tool.uv] above) — the pin makes a new release an
# explicit choice, not a re-lock side effect. Runtime group, not a CLI.
litcache = ["google-cloud-storage", "psycopg[binary]", "docling-core", "pypdfium2", "litfetch==0.1.0", "litdown==0.4.0", "pubmed_proto==0.1.0"]
# Schema codegen (tools/schema/regen.py): datamodel-code-generator turns the
# normalized JSON Schema into Pydantic v2 models; grpcio-tools' protoc turns a
# real domain's .proto into the committed themis/rpc/ gRPC stubs. Both are CLIs.
codegen = ["datamodel-code-generator", "grpcio-tools"]
# Seed-ingestion runtime (litcache/ingest_beam.py): the per-paper core wrapped in
# Beam/Dataflow. apache-beam[gcp] pins google-cloud-storage to the 2.x line its
# gcsio requires (co-resolves with litcache in the worker).
dataflow = ["apache-beam[gcp]", { include-group = "litcache" }]
# Cloud SQL client: the connector + pg8000 (IAM auth, no stored password, mirroring
# infra/sql.py), shared by the auth service's cloudsql backend and the migrate runner.
cloudsql = ["cloud-sql-python-connector", "pg8000"]
# auth service (themis/services/auth): the grpc.aio server + generated stubs + the Cloud
# SQL backend. grpcio is the runtime; grpcio-health-checking serves grpc.health.v1;
# protobuf backs the generated messages (json_format seeds the fixture backend).
auth = ["grpcio", "grpcio-health-checking", "protobuf", { include-group = "cloudsql" }]
# migration runner (themis/migrate): applies the committed SQL migrations at deploy.
migrate = [{ include-group = "cloudsql" }]
# service-to-service client (themis/clients): grpcio is the channel + generated stub;
# google-auth mints the caller SA's ID token from the metadata server and requests is its
# HTTP transport; protobuf backs the generated messages.
session = ["grpcio", "google-auth", "requests", "protobuf"]
# store service (themis/services/store): the grpc.aio server + generated stubs + the GCS
# backend (google-cloud-storage) for the working document and workspace archive. Includes the
# session client — every request is authorized through auth before it touches storage.
store = ["grpcio", "grpcio-health-checking", "protobuf", "google-cloud-storage", { include-group = "session" }]
# hello service (themis/services/hello): the sandbox forward leg's session-token-authed test
# consumer. grpc.aio server + generated stubs; includes the session client — every request is
# authorized through auth. No storage backend of its own.
hello = ["grpcio", "grpcio-health-checking", "protobuf", { include-group = "session" }]
# dispatcher service (themis/services/dispatcher): the webhook receiver that drains the work queue
# and spawns sandboxes. aiohttp is the HMAC-webhook server + the Cloud Run Admin API client; anthropic
# is the SDK the work queue is driven through; google-cloud-kms derives the per-session token
# (google-crc32c verifies its response integrity); google-auth mints the Cloud Run Admin API token for
# the jobs.run spawn. Also covers the shared themis/clients/work_queue and themis/clients/auth.
dispatcher = ["aiohttp", "anthropic", "google-cloud-kms", "google-crc32c", "google-auth", "standardwebhooks"]
# credential-proxy sidecar (themis/services/proxy): the sandbox's agent-facing forwarder. aiohttp is
# the Anthropic HTTP/1.1 reverse proxy + its upstream client; anthropic is the SDK the turn-watcher
# subscribes to the session event stream through; grpcio (via the session group) is the generic gRPC
# forward proxy. Includes the session client for id_token (the SA ID token on the forward channel).
proxy = ["aiohttp", "anthropic", { include-group = "session" }]
# sandbox agent image (themis/agent): the untrusted `ant beta:worker run` container. grpcio + protobuf
# back the generated stubs the model imports to call internal services in code mode; the
# working-document linter (themis/document_linter) is stdlib-only.
agent = ["grpcio", "protobuf"]
# check-jsonschema: the metaschema validator the schema tests shell out to
# (schema/tests). Invoked as a CLI, never imported, so no type stubs. pydantic:
# import-check the generated models in schema/tests (the codegen group provides
# the generator; the runtime import needs pydantic itself). testcontainers: the
# crosswalk tests mint against a throwaway Postgres (never a mock — the
# UNIQUE-in-one-txn semantics are the thing under test), gated on a reachable
# Docker daemon.
test = ["pytest", "pyyaml", "check-jsonschema", "pydantic", "testcontainers[postgres]", { include-group = "litcache" }, { include-group = "dataflow" }, { include-group = "auth" }, { include-group = "session" }, { include-group = "store" }, { include-group = "hello" }, { include-group = "dispatcher" }, { include-group = "proxy" }, { include-group = "agent" }]
# Pulumi program deps (infra/). Also the venv Pulumi runs the program in
# (infra/Pulumi.yaml -> virtualenv ../.venv): `uv sync --group infra`. pulumi-tls
# mints the internal ALB's self-signed serving cert (infra/themis_infra/internal_lb.py).
infra = ["pulumi", "pulumi-gcp", "pulumi-tls"]
# pre-commit: the lint CI job runs `pre-commit run --all-files`, so the hook
# config is the single source of truth for static checks — CI can't drift from
# what runs locally. pydantic: pyright (now a hook) type-checks schema/tests (the
# generated models and their tests) which import pydantic; absent it, pyright
# can't resolve pydantic.* and fails on symbols the env (which has pydantic)
# resolves fine. lxml-stubs: litcache/metadata.py parses efetch XML via lxml (a
# pubmed_proto dep, unstubbed); pyright needs the stubs to resolve `lxml.etree`.
lint = ["pre-commit", "ruff", "pyright", "pytest", "pyyaml", "types-PyYAML", "lxml-stubs", "pydantic", "testcontainers[postgres]", { include-group = "infra" }, { include-group = "litcache" }, { include-group = "dataflow" }, { include-group = "auth" }, { include-group = "migrate" }, { include-group = "session" }, { include-group = "store" }, { include-group = "hello" }, { include-group = "dispatcher" }, { include-group = "proxy" }, { include-group = "agent" }]

[tool.pytest.ini_options]
# schema/tests holds the TypeSpec tool's tests + .tsp fixtures, co-located with
# the schema/ Node project so the emitter's node_modules resolution works.
testpaths = ["tests", "schema/tests", "themis/services/auth/tests", "themis/migrate/tests", "themis/clients/auth/tests", "themis/clients/work_queue/tests", "themis/services/store/tests", "themis/services/hello/tests", "themis/services/dispatcher/tests", "themis/services/proxy/tests", "themis/document_linter/tests"]
# "." for repo-root packages (themis, tools); schema/tests/proto for the committed
# feature-corpus proto stub (features_pb2), which test_generated_stubs imports.
pythonpath = [".", "schema/tests/proto"]
consider_namespace_packages = true

[tool.ruff]
line-length = 120
target-version = "py313"

# Generated code (tools/schema/regen.py): committed, never hand-edited, so linting
# it is noise (the datamodel-codegen header trips ERA001; protoc output is not
# lint-clean) and a reformat would fight the freshness gate. `themis/rpc` is the
# generated proto/gRPC stubs. Real-domain model dirs join this list when they land
# (Stage 1+). The pre-commit ruff hooks pass --force-exclude, so this holds even
# when pre-commit hands ruff explicit paths.
extend-exclude = ["schema/tests/proto", "litcache/models/litcache.py", "themis/rpc"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "W",
    "ANN", "ARG", "BLE", "COM", "DTZ", "ERA", "EXE", "ICN", "ISC",
    "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "T10", "TID", "UP", "YTT",
]

fixable = ["ALL"]

ignore = [
    "COM812",  # Trailing comma prohibited
    # D1xx — docstring *presence*. We enforce docstring format (D2/D3/D4)
    # if a docstring exists, but don't require one on every public symbol.
    # The general-review prompt nudges authors toward docstrings on
    # public APIs as a soft policy.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "Q000",    # Single quotes found but double quotes preferred
    "Q003",    # Change outer quotes (conflicts with single-quote formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]
"schema/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]
"themis/services/auth/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]
"themis/services/store/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
    "S105",   # fixture session tokens are not secrets
]
"themis/services/hello/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
    "S105",   # fixture session tokens are not secrets
]
"themis/services/dispatcher/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
    "S105",   # fixture env keys / session tokens are not secrets
    "S106",   # fixture env keys / session tokens passed as kwargs are not secrets
]
"themis/clients/work_queue/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]
"themis/services/proxy/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
    "S105",   # fixture env keys / session tokens are not secrets
    "S106",   # fixture credentials passed as kwargs are not secrets
]
"themis/document_linter/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]
"themis/services/*/servicer.py" = [
    "N802",   # gRPC servicer methods mirror the proto service's PascalCase rpc names
    "ARG002", # the (request, context) signature is the generated base's; a paramless (Empty) rpc ignores request
]
"themis/migrate/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
]
"themis/clients/auth/tests/**" = [
    "S101",   # asserts are the standard pytest idiom
    "SLF001", # tests legitimately reach into module privates
    "N802",   # inline test servicers mirror the proto service's PascalCase rpc names
    "S105",   # fixture session tokens are not secrets
    "ARG002", # a servicer override keeps the base signature even where a param is unused
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["themis_infra", "themis"]

# Complexity thresholds: roughly double the ruff defaults so the checks
# fire on genuinely sprawling code but not on everyday parsers and
# dispatcher functions.
[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 10
max-statements = 80
max-locals = 25

[tool.pyright]
pythonVersion = "3.13"
include = ["tools", "tests", "schema/tests", "infra", "litcache", "themis"]
# themis/rpc is generated protoc output (dynamic message classes); the committed
# .pyi gives importers static types, but the stubs themselves are not standard-mode
# clean, so exclude them from checking. Re-list pyright's auto-excludes, which
# specifying `exclude` would otherwise drop. schema/tests/proto: resolve the generated
# feature-corpus stub (features_pb2) that test_generated_stubs imports; `ignore` keeps
# its generated files out of type-checking without replacing pyright's default excludes.
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "themis/rpc"]
extraPaths = ["infra", "schema/tests/proto"]
ignore = ["schema/tests/proto"]
typeCheckingMode = "standard"
